# Learning-Algorithms

./: CMakeLists.txt  Element.cpp  Element.h  README.md  data.txt  knnalgorithm.cpp  knnalgorithm.h  main.cpp
ActivationFunctions/: totalActivationFunctions.cpp  totalActivationFunctions.h
Knn/: KnnAlgorithm.cpp  KnnAlgorithm.h
Perceptron/: PerceptronAlgorithm.cpp  PerceptronAlgorithm.h
